<resources>
    <string name="app_name">Nasho Learn</string>
    <string name="nasho">Nasho</string>
    <string name="learn">Learn</string>
    <string name="welcome">Selamat Datang</string>
    <string name="type_your_email_and_password_to_login">Ketik email dan kata sandi untuk masuk</string>
    <string name="email">Email</string>
    <string name="type_here">Ketik disini</string>
    <string name="password">Password</string>
    <string name="forgot_password_symbol">Lupa kata sandi?</string>
    <string name="enter">Masuk</string>
    <string name="do_not_have_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="sharaf">Sharaf</string>
    <string name="sharaf_arab">(شرف)</string>
    <string name="dummy_desc">Nahwu adalah ilmu yang mempelajari struktur kalimat dalam bahasa Arab.</string>
    <string name="nahwu">Nahwu</string>
    <string name="nahwu_arab">(نحوو)</string>
    <string name="dummy_bab">BAB 1</string>
    <string name="last_learn">Pembelajaran yang Terakhir di Pelajari</string>
    <string name="welcome_material">Kuasai Tata Bahasa Arab dengan Mudah dan Cepat</string>
    <string name="test">test</string>
    <string name="nahwu_desc">Nahwu adalah ilmu yang mempelajari struktur kalimat dalam bahasa Arab. Fokus utama nahwu adalah bagaimana kata-kata disusun dalam sebuah kalimat agar sesuai dengan kaidah tata bahasa Arab. Nahwu mencakup aturan tentang posisi dan fungsi kata dalam kalimat, serta perubahan yang terjadi pada akhir kata karena posisi tersebut.</string>
    <string name="material">Materi</string>
    <string name="ujian">Ujian</string>
    <string name="learn_title">Yuk, Belajar %1$s!</string>
    <string name="learn_nahwu">Yuk, Belajar Nahwu!</string>
    <string name="nahwu_text_arab">Nahwu (نحوو)</string>
    <string name="sharaf_desc">Sharaf adalah salah satu cabang penting dalam ilmu bahasa Arab yang fokus pada morfologi atau struktur kata. Sharaf mempelajari bentuk-bentuk kata, perubahan bentuk kata, dan bagaimana kata-kata itu diubah untuk menciptakan makna yang berbeda.</string>
    <string name="sharaf_text_arab">Sharaf (شرف)</string>
    <string name="learn_sharaf">Yuk, Belajar Sharaf!</string>
    <string name="start_learn">Mulai belajar</string>
    <string name="dummy_material_title">Materi 1</string>
    <string name="dummy_exam_title">Ujian Tengah</string>
    <string name="dummy_material_desc">Teori Dasar Nahwu</string>
    <string name="lock_desc">Selesaikan terlebih dahulu bab sebelumnya</string>
    <string name="start_quiz">Mengerjakan Kuis</string>
    <string name="show_result">Lihat Hasil Quiz</string>
    <string name="quiz">Kuis</string>
    <string name="question_title">Soal:</string>
    <string name="true_text">Benar</string>
    <string name="false_text">Salah</string>
    <string name="show_discussion">Lihat Pembahasan</string>
    <string name="back_to_material">Kembali ke materi</string>
    <string name="quiz_result">Hasil Kuis</string>
    <string name="motivational_sentences_1">Kamu Hebat!!!</string>
    <string name="default_counter">0</string>
    <string name="grade_max">/100</string>
    <string name="motivational_sentences_2">Teteap Pertahankan\nSemangatmu ya.</string>
    <string name="zero_question">0 Soal</string>
    <string name="logout">Keluar Akun</string>
    <string name="about_us">Tentang kami</string>
    <string name="our_vision">Visi Kami</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="password_confirm">Konfirmasi Kata Sandi</string>
    <string name="no">Tidak</string>
    <string name="yes_of_course">Ya, Tentu</string>
    <string name="title_quiz_warning">Kamu Belum Bisa Nih</string>
    <string name="desc_quiz_warning">Yuk lanjutkan pembelajaran materimu terlebih dahulu sebelum mengerjakan kuis</string>
    <string name="learn_again">Belajar Materi</string>
    <string name="desc_logout">Apakah anda yakin ingin keluar?</string>
    <string name="title_logout">Keluar Akun?</string>
    <string name="title_sign_up">Daftar Akun</string>
    <string name="desc_sign_up">Masukkan data diri untuk membuat akun baru</string>
    <string name="title_settings">Pengaturan</string>
    <string name="dummy_name_user">Fulan Bin Fulan</string>
    <string name="dummy_email_user">fulanbinfulan@gmail.com</string>
    <string name="about_us_data">Nasho Learn adalah sebuah aplikasi yang dapat membantu pengguna untuk memahami secara lebih mendalam mengenai tata bahasa dalam bahasa Arab.</string>
    <string name="our_vision_data">Di Nasho Learn, kami percaya bahwa memahami dasar-dasar tata bahasa Arab adalah hal yang penting bagi siapa saja yang ingin benar-benar menguasai bahasa ini. Visi kami adalah menyediakan platform yang komprehensif, interaktif, dan ramah pengguna di mana para pengguna dapat mendalami studi nahwu (sintaksis) dan sharaf (morfologi).</string>

    <string name="login_failed">Gagal Masuk: %1$s</string>
    <string name="register_failed">Gagal Mendaftar: %1$s</string>
    <string name="category_failed">Gagal Mendapatkan Kategori: %1$s</string>
    <string name="material_failed">Gagal Mendapatkan Materi: %1$s</string>
    <string name="update_status_failed">Gagal Memperbaharui Status: %1$s</string>
    <string name="question_failed">Gagal Mendapatkan Data Soal: %1$s</string>
    <string name="submit_failed">Gagal Submit Soal: %1$s</string>
    <string name="discussion_failed">Gagal Mendapatkan Pembahasan: %1$s</string>
    <string name="profile_failed">Gagal Mendapatkan Data Profil: %1$s</string>

    <string name="logout_is_success">Logout is successful</string>
    <string name="logout_is_failed">Logout is failed</string>
    <string name="empty_data">Data anda kosong</string>
    <string name="mid_exam">Ujian Tengah</string>
    <string name="end_exam">Ujian Akhir</string>
    <string name="exam_type">Ujian  %1$s</string>
    <string name="theory">Teori %1$s</string>
    <string name="next">Lanjut</string>
    <string name="finish">Selesai</string>
    <string name="back">Kembali</string>
    <string name="discussion_right_answer">Jadi, kunci jawaban yang tepat adalah</string>
    <string name="discussion_answer">Jawaban kamu adalah ...</string>
    <string name="discussion">Pembahasan</string>
    <string name="video">Video</string>
</resources>