<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="327dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_out" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/title_logout"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/desc_logout"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/no"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="#015869" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/yes_of_course"
                android:textColor="#015869"
                android:textSize="14sp"
                android:textStyle="bold"
                app:strokeColor="@color/Success50" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>