<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.views.QuizResultActivity">

    <TextView
        android:id="@+id/tv_result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/manrope_bold"
        android:textColor="#384250"
        android:textSize="20sp"
        tools:text="@string/quiz_result" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="#90BEC7"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/img_nasho"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nasho_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/nasho"
                android:textColor="#015869"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
                app:layout_constraintStart_toEndOf="@+id/iv_logo"
                app:layout_constraintTop_toTopOf="@+id/iv_logo" />

            <TextView
                android:id="@+id/tv_learn_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/learn"
                android:textColor="#E57D1A"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_nasho_label"
                app:layout_constraintStart_toEndOf="@+id/tv_nasho_label"
                app:layout_constraintTop_toTopOf="@+id/tv_nasho_label" />

            <TextView
                android:id="@+id/tv_quiz_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/manrope_bold"
                android:textColor="#E57D1A"
                app:layout_constraintStart_toStartOf="@+id/iv_logo"
                app:layout_constraintTop_toBottomOf="@+id/tv_nasho_label"
                tools:text="Quiz title" />

            <TextView
                android:id="@+id/tv_motivational_sentences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/motivational_sentences_1"
                android:textColor="#015869"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_quiz_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_quiz_title" />

            <TextView
                android:id="@+id/tv_quiz_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/default_counter"
                android:textColor="#015869"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="@+id/tv_motivational_sentences"
                app:layout_constraintTop_toBottomOf="@+id/tv_motivational_sentences" />

            <TextView
                android:id="@+id/tv_quiz_grade_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/grade_max"
                android:textColor="#015869"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_quiz_grade"
                app:layout_constraintStart_toEndOf="@+id/tv_quiz_grade"
                app:layout_constraintTop_toTopOf="@+id/tv_quiz_grade" />

            <TextView
                android:id="@+id/tv_motivational_sentences_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/manrope"
                android:textColor="#015869"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/tv_quiz_grade"
                app:layout_constraintTop_toBottomOf="@+id/tv_quiz_grade"
                tools:text="@string/motivational_sentences_2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-20dp"
                android:src="@drawable/ic_quiz_success"
                app:layout_constraintBottom_toTopOf="@+id/cv_answer_result"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_answer_result"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_motivational_sentences_2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_answer_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:src="@drawable/ic_jumlah_benar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_true_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="-8dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/true_text"
                        android:textColor="#015869"
                        android:textSize="12sp"
                        app:layout_constraintStart_toEndOf="@+id/iv_answer_true"
                        app:layout_constraintTop_toTopOf="@+id/iv_answer_true" />

                    <TextView
                        android:id="@+id/tv_true_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/zero_question"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_true_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_true_label" />

                    <TextView
                        android:id="@+id/tv_false_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="61dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/false_text"
                        android:textColor="#C25555"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_true_label" />

                    <TextView
                        android:id="@+id/tv_false_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/zero_question"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_false_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_false_label" />

                    <ImageView
                        android:id="@+id/iv_answer_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/ic_jumlah_salah"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_answer_true"
                        app:layout_constraintEnd_toStartOf="@+id/tv_false_label"
                        app:layout_constraintTop_toTopOf="@+id/iv_answer_true" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_discussion"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/show_discussion"
        app:backgroundTint="#015869" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_to_material"
        android:textColor="@color/Success50"
        android:textColorLink="#000000"
        app:strokeColor="@color/primarytrue" />

</LinearLayout>